fix tests, minor refactor